Added a logout button on landing page

--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -18,7 +18,7 @@
         <% } %>
 
         <form action = "/logout" method = "POST">
-            <p><a href="/">Go back</a></p>
+            <button type="submit">Logout</button>
         </form>
 </div>
 <%- include('partials/footer') %>
