--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,19 +1,20 @@
 <%- include('partials/header', { title: "Login" }) %>
     <h1>Login</h1>
     <% if (errorMsg) { %>
-        <p class="error-message"><%= errorMsg %></p>
-    <form action="/login" method="POST">
-        <div class="form-input-container">
-            <label for="email">Email:</label>
-            <input type="email" name="email" id="email" required>
-        </div>
-        <div class="form-input-container">
-            <label for="password">Password:</label>
-            <input type="password" name="password" id="password" required>
-        </div>
-        <button type="submit">Login</button>
-    </form>
-    <form action = "/logout" method = "POST">
-        <p><a href="/">Go back</a></p>
-    </form>
-<%- include('partials/footer') %>
+        <p class="error-message">
+            <%= errorMsg %>
+        </p>
+        <% } %>
+            <form action="/login" method="POST">
+                <div class="form-input-container">
+                    <label for="email">Email:</label>
+                    <input type="email" name="email" id="email" required>
+                </div>
+                <div class="form-input-container">
+                    <label for="password">Password:</label>
+                    <input type="password" name="password" id="password" required>
+                </div>
+                <button type="submit">Login</button>
+            </form>
+            <p><a href="/">Go back</a></p>
+            <%- include('partials/footer') %>
